add Lesson and dependency between entity lesson and course
