# Backend/domain/src/main/java/sk/posam/fsa/discussion/service/LessonFacade.java
@@ -1,0 +1,7 @@
+package sk.posam.fsa.discussion.service;
+
+import sk.posam.fsa.discussion.Lesson;
+
+public interface LessonFacade {
+    void createLesson(Lesson lesson);
+}
