# Backend/inbound-controller-ws/src/main/java/sk/posam/fsa/discussion/mapper/CourseMapper.java
@@ -2,7 +2,9 @@ package sk.posam.fsa.discussion.mapper;
 
 import org.mapstruct.Mapper;
 import sk.posam.fsa.discussion.Course;
+import sk.posam.fsa.discussion.Lesson;
 import sk.posam.fsa.discussion.rest.dto.CourseDto;
+import sk.posam.fsa.discussion.rest.dto.LessonDto;
 
 import java.util.Collection;
 import java.util.List;
@@ -14,4 +16,7 @@ public interface CourseMapper {
 
     List<CourseDto> toDto(Collection<Course> courses);
 
+    LessonDto toDto(Lesson lesson);
+
+    List<LessonDto> toDto(List<Lesson> lessons);
 }
